@@ -252,3 +252,4 @@ suggestions:
   Scott M
   Stefan Frühwirth
   Pierre Campet
+  Denis Kasak
